--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,13 @@ FMC_SDR_PCB_abandoned/
 FMC_SDR_LFFE/FMC_SDR_LFFE/_Previews
 FMC_SDR_LFFE/FMC_SDR_LFFE/History
 FMC_SDR_XFE/FMC_SDR_XFE/_Previews
+FMC_SDR_XFE/FMC_SDR_XFE/__Previews
 FMC_SDR_XFE/FMC_SDR_XFE/History
 FMC_SDR/FMC_SDR/_Previews
 FMC_SDR/FMC_SDR/History
+FMC_SDR_MULTIBOARD_SFE/FMC_SDR_Multiboard/History
+FMC_SDR_MULTIBOARD_SFE/FMC_SDR_Multiboard/_Previews
+FMC_SDR_MULTIBOARD_XFE/FMC_SDR_Multiboard/History
+FMC_SDR_MULTIBOARD_XFE/FMC_SDR_Multiboard/_Previews
+FMC_SDR/FMC_SDR/PCB-Layout/History
+FMC_SDR_XFE/FMC_SDR_XFE/FMC_SDR_XFE — kopia.PcbDoc
